argocd/manifests/prod/apps/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    app: it-tools
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 80 # app listens here
